src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-dwU-dhF500-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault column width: U\ndefault window height: F500\nwant fullscreen: BN"
expression: snapshot
---
initial configure:
size: 0 × 500, bounds: 1248 × 688, states: []

post-map configures:
size: 1 × 500, bounds: 1248 × 688, states: [Activated]
